--- a/Enciclopedia/templates/explore.html
+++ b/Enciclopedia/templates/explore.html
@@ -317,21 +317,21 @@
         </div>
         <ul class="nav-list">
             <li>
-                <a href="#">
+                <a href="/">
                     <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Dashboard</span>
                 </a>
                 <span class="tooltip">Dashboard</span>
             </li>
             <li>
-                <a href="#">
+                <a href="/test">
                     <i class='bx bx-test-tube'></i>
                     <span class="links_name">Find</span>
                 </a>
                 <span class="tooltip">Find</span>
             </li>
             <li>
-                <a href="#">
+                <a href="/explore">
                     <i class='bx bx-globe-alt'></i>
                     <span class="links_name">Explore</span>
                 </a>
@@ -367,7 +367,7 @@
                 </div>
             </div>
             <div id="model">
-                <model-viewer camera-controls alt="A 3D model" src="../media/indian_rhino_smoothie_3d/scene.gltf">
+                <model-viewer camera-controls alt="A 3D model" src="/media/indian_rhino_smoothie_3d/scene.gltf">
                 </model-viewer>
             </div>
         </div>
@@ -398,7 +398,7 @@
                 </div>
             </div>
             <div id="model">
-                <model-viewer camera-controls alt="A 3D model" src="../media/bear_walk_animation/scene.gltf">
+                <model-viewer camera-controls alt="A 3D model" src="/media/bear_walk_animation/scene.gltf">
                 </model-viewer>
             </div>
         </div>
@@ -427,7 +427,7 @@
                 </div>
             </div>
             <div id="model">
-                <model-viewer camera-controls alt="A 3D model" src="../media/elephant/scene.gltf">
+                <model-viewer camera-controls alt="A 3D model" src="/media/elephant/scene.gltf">
                 </model-viewer>
             </div>
         </div>
@@ -450,7 +450,7 @@
                 </div>
             </div>
             <div id="model">
-                <model-viewer camera-controls alt="A 3D model" src="../media/polar_bear_1/scene.gltf">
+                <model-viewer camera-controls alt="A 3D model" src="/media/polar_bear_1/scene.gltf">
                 </model-viewer>
             </div>
         </div>
@@ -475,7 +475,7 @@
                 </div>
             </div>
             <div id="model">
-                <model-viewer camera-controls alt="A 3D model" src="../media/running_tiger/scene.gltf">
+                <model-viewer camera-controls alt="A 3D model" src="/media/running_tiger/scene.gltf">
                 </model-viewer>
             </div>
         </div>
@@ -503,7 +503,7 @@
                 </div>
             </div>
             <div id="model">
-                <model-viewer camera-controls alt="A 3D model" src="../media/flapping_eagle/scene.gltf">
+                <model-viewer camera-controls alt="A 3D model" src="/media/flapping_eagle/scene.gltf">
                 </model-viewer>
             </div>
         </div>
